tests/e2e/scenarios/negative/compile_syntax_error.ks
// Expected phase: compile — malformed expression (parse/syntax error).

val x = (1 +
